<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geomhelper.Fragments.FragmentTests">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/_8"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_test_4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_test_4"
            android:text="@string/test_4" />

        <Button
            android:id="@+id/button_test_3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_test_3"
            android:text="@string/test_3" />

        <Button
            android:id="@+id/button_test_2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_test_2"
            android:text="@string/test_2" />

        <Button
            android:id="@+id/button_test_1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_test_1"
            android:text="@string/test_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/_7"
            android:textColor="#000000"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>
